Removed temporary fix for aligning sidebar under new top pagination

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1119,7 +1119,6 @@ header li, footer li{
     .sidebar_container
     {
         padding: 0px;
-        margin-top: 54px;
     }
 
     /* Sidebar */
